  * Sign up now check if the user is active or not and redirect him accordingly setting the inactive_signed_up message
  * Use ActiveModel#to_key instead of #id
  * sign_out_all_scopes now destroys the whole session

* default behavior changes
  * sign_out_all_scopes defaults to true as security measure
  * http authenticatable is disabled by default

* bugfix
  * after_sign_in_path_for always receives a resource
  * Do not execute Warden::Callbacks on Devise::TestHelpers (by github.com/sgronblo)
  * Password recovery and account unlocking takes into account authentication keys (by github.com/RStankov)
  * FailureApp now properly handles nil request.format
  * Fix a bug causing FailureApp to return with HTTP Auth Headers for IE7

== 1.1.3

* bugfix
  * Add reply-to to e-mail headers by default
  * Updated the views generator to respect the rails :template_engine option (by github.com/fredwu)
  * Check the type of HTTP Authentication before using Basic headers
  * Avoid invalid_salt errors by checking salt presence (by github.com/thibaudgg)
  * Forget user deletes the right cookie before logout, not remembering the user anymore (by github.com/emtrane)
  * Fix for failed first-ever logins on PostgreSQL where column default is nil (by github.com/bensie)
  * :default options is now honored in migrations

== 1.1.2

* bugfix
  * Compatibility with latest Rails routes schema

== 1.1.1

* bugfix
  * Fix a small bug where generated locale file was empty on devise:install

== 1.1.0

* enhancements
  * Rememberable module allows user to be remembered across browsers and is enabled by default (by github.com/trevorturk)
  * Rememberable module allows you to activate the period the remember me token is extended (by github.com/trevorturk)
  * devise_for can now be used together with scope method in routes but with a few limitations (check the documentation)
  * Support `as` or `devise_scope` in the router to specify controller access scope